--- a/source/_posts/19/06/01/190601m112844.md
+++ b/source/_posts/19/06/01/190601m112844.md
@@ -16,6 +16,11 @@ date: 2019-06-01 11:28:44
   <ol>
     <li><strong>2019-06:</strong> <a href="#id190601m113246">Section</a>.</li>
     <li><strong>2019-06-01:</strong> <a href="#id190601m113214">Section</a>.</li>
+    <li><strong>2019-06-02:</strong> <a href="#id190602m020956">Section</a>.</li>
+    <li><strong>2019-06-03:</strong> <a href="#id190603m013911">Section</a>.</li>
+    <li><strong>2019-06-04:</strong> <a href="#id190604m022305">Section</a>.</li>
+    <li><strong>2019-06-05:</strong> <a href="#id190605m004800">Section</a>.</li>
+    <li><strong>2019-06-06:</strong> <a href="#id190606m031912">Section</a>.</li>
     <li><strong>2019-06-??:</strong> <a href="#xx">Section</a>.</li>
   </ol>
 </div>
@@ -23,15 +28,52 @@ date: 2019-06-01 11:28:44
 <div class="h2">
   <h2>2019-06<a id="id190601m113246"></a></h2>
   <div class="kwCloud">
-    <div class="itm s4">{ Stoicism }</div>
-    <div class="itm s3">Virtue</div>
+    <div class="itm s3">{ Stoicism }</div>
+    <div class="itm s2">Virtue</div>
+    <div class="itm s2">{ Corenet }</div>
+    <div class="itm s1">{ LoveAndHappiness}-{ lahSale }</div>
+    <div class="itm s1">{ MongoDB }</div>
+    <div class="itm s1">Database schema</div>
+    <div class="itm s1">Drawing ,, seeing "essential" under surface</div>
+    <div class="itm s1">Music composition</div>
+    <div class="itm s1">{ Bootstrap }</div>
   </div>
   <ol>
     <li><strong>By time:</strong>
       <ol>
         <li><strong>190601:</strong>
           <ol>
-            <li><strong>??</strong></li>
+            <li><strong>( Music ) { Produce 48 } - Rumor - karaoke:</strong> <a href="https://youtu.be/szSIpCLwxNE">Link</a>. Better for focusing and studying.</li>
+            <li><strong>Playing { game }-{ Zero-k }:</strong> Playing game all day long, non-stoped, even passed midnight.</li>
+            <li><strong>Re-making new "tree classification system" to replace previous { facet system}.</strong></li>
+          </ol>
+        </li>
+        <li><strong>190602:</strong>
+          <ol>
+            <li><strong>( Music ) { Tobu } - Sound of Goodbye:</strong> <a href="https://youtu.be/goRGKll_zE0">Link</a>. <strong>Peace feeling</strong>, ideal for focusing and studying.</li>
+            <li><strong>Working on { corenet },, back-end ,, thinking about "tree classification system" and doing database schema.</strong></li>
+            <li><strong>Playing { game }-{ Zero-k }.</strong></li>
+          </ol>
+        </li>
+        <li><strong>190603:</strong>
+          <ol>
+            <li><strong>( Music ) { Tobu } - Sound of Goodbye:</strong> <a href="https://youtu.be/goRGKll_zE0">Link</a>. <strong>Peace feeling</strong>, ideal for focusing and studying.</li>
+            <li><strong>( MongoDB ) Things I wish I knew before I started working with Mongodb:</strong> ... .</li>
+          </ol>
+        </li>
+        <li><strong>190604:</strong>
+          <ol>
+            <li><strong>關於自學的陷阱 - 如何有效率的的自學任何專業領域?.</strong></li>
+            <li><strong>Drawing ,, seeing "essential" under surface.</strong></li>
+            <li><strong>Talking with Woody.</strong></li>
+            <li><strong>Music composition.</strong></li>
+          </ol>
+        </li>
+        <li><strong>190605:</strong>
+          <ol>
+            <li><strong>( Philosophy ) ( Stoicism ) Hold the optimism in the pessimism - { Pursuit of Wonder }:</strong> <a href="https://youtu.be/4OhwxgR3g5g">Link</a>. --{ ... we find the optimism in the pessimism. }-- ... holding 2 conflicting model ... .</li>
+            <li><strong>( Music ) { ITZY } - DALLA DALLA:</strong> <a href="https://youtu.be/pNfTK39k55U">Link</a>.</li>
+            <li><strong>MongoDB, CSS, Bootstrap.</strong></li>
           </ol>
         </li>
       </ol>
@@ -42,18 +84,245 @@ date: 2019-06-01 11:28:44
 <div class="h2">
   <h2>2019-06-01<a id="id190601m113214"></a></h2>
   <div class="kwCloud">
-    <div class="itm s1">??</div>
+    <div class="itm s2">{ Corenet } ,, new tree classification system</div>
   </div>
   <ol>
+    <li><strong>( Music ) { Produce 48 } - Rumor - karaoke:</strong> <a href="https://youtu.be/szSIpCLwxNE">Link</a>. Better for focusing and studying.</li>
+    <li><strong>( Music ) { Produce 48 } - Rumor - bass boosted:</strong> <a href="https://youtu.be/jmkeeKdJToQ">Link</a>.</li>
+    <li><strong>柯文哲 - 不怕被公開自己所有事情 - 坦蕩蕩:</strong> <a href="https://youtu.be/0gtwCyH4bi0">Link</a>.</li>
+    <li><strong>Re-making new "tree classification system" to replace previous { facet system}:</strong> Abandon old <strong>"facet"</strong> concept that always use a (or multiple) <strong>"key::value"</strong> pair, to [ interpret ],[ describe ] a [ concept ]-[ context ], now the new "classification" system will use <strong>strict tree structure</strong> system to [ interpret ],[ describe ] a [ concept ]-[ context ]. There are going to have multiple { Path } for a { Post }, each path is unique [ in ]-[ for ] both this { Post } and the source "classification tree". // For example, in the past I will [ interpret ],[ describe ] a post with following facets - <code>c::software</code>, <code>software::database</code>, <code>database::application</code>, <code>application::mongoDB</code>, <code>c::programming</code>, <code>programming::language</code>, <code>language::javascript</code> (7 facets). But now it will be [ interpret ],[ describe ] like this - <code>software/database/application/mongoDB</code>, <code>programming/language/javascript</code> (2 path) (it is possible 2 path be on 1 tree, but for this case, it's 2 path on 2 tree). In this way, I get many advantage. <strong>First</strong>, <strong>ambiguous</strong> problem (should <code>firework::price</code> implies <code>adobe/firework/price</code> or <code>explosive/firework/price</code>?) is no longer the case (since a { path } defines a [ individual ]-[ complete ] context). <strong>Second</strong>, easy to manage and <strong>remember</strong>, user don't need to [ add ]-[ save ] multiple facets combination manually (like <code>database::mongoDB</code> or <code>programming::javascript</code> or even more middle combination) and don't need to remember the <strong>exact hierarchy</strong> of those nodes, since [ with ]-[ after ] new [ concept ]-[ system design ], even user input <code>software/mongoDB</code>, or even simply <code>mongoDB</code> will get the results. <strong>Third</strong>, the serching becomes very <strong>flexible</strong>, user can use <code>software</code> to get very [ board ]-[ rough ]-[ many ] resuts (of related posts), or either of one of <code>software/database/application/mongoDB</code>, <code>database/mongoDB</code>, <code>software/mongoDB</code>, <code>mongoDB</code> to get very [ narrowed down ]-[ few ] results, very flexible while still user friendly. // This new [ system ]-[ concept ] hugely improve the user experience (and reduce cognitive load) when serching, and managing those meta data.</li>
     <li><strong>By time:</strong>
       <ol>
         <li><strong>00:00 Playing { game }-{ Zero-k }:</strong> Playing game all day long, non-stoped, even passed midnight.</li>
         <li><strong>03:45 Sleep:</strong> Stay up late again, second day. It have been quite some time I did this last time.</li>
         <li><strong>11:10 Wake up.</strong></li>
         <li><strong>11:11 Upload blog.</strong></li>
-        <li><strong>12:00 ??.</strong></li>
+        <li><strong>12:00 Watching video, cooking:</strong> <a href="https://youtu.be/ItykyRdBTHE">Islamist Militants on Israel's Doorstep: The War Next Door</a>.</li>
+        <li><strong>14:40 Start to working on { corenet }:</strong> My CMS. Set up server side and client side.</li>
+        <li><strong>14:56 Take a nap.</strong></li>
+        <li><strong>15:40 Wake up, thinking about the structure of { corenet }.</strong></li>
+        <li><strong>15:53 Buying drinks:</strong> Good, knowing where to start. Start to emerge the figure of what the first prototype of { corenet } looks like.</li>
+        <li><strong>16:05 Watching video:</strong></li>
+        <li><strong>16:20 Downloading music:</strong> Listening when coding.</li>
+        <li><strong>16:30 Start to working on { corenet }:</strong> My CMS. Set up server side and client side.</li>
+        <li><strong>16:35 Bathroom.</strong></li>
+        <li><strong>16:40 Working on { corenet }:</strong> Installing { boostrap }. Creating basic directories and files.</li>
+        <li><strong>17:20 Working on { corenet },, back-end ,, setting up { MVC } structure.</strong></li>
+        <li><strong>17:50 Brushing teeth, dancing with music.</strong></li>
+        <li><strong>18:10 Working on { corenet },, back-end ,, working on database schema ,, { post },{ facet } { collection }:</strong> Encounter problem of designing [ different ]-[ new ] facet system, a basic "key:value" pair for a single facet, will be functional, but not [ prefect ]-[ idea ]. This is related more of a symantic problem, less of a database schema problem. Still not figure out it yet.</li>
+        <li><strong>19:50 Cooking.</strong></li>
+        <li><strong>20:30 Eating, [ deeply ]-[ very focused on ] re-making new "tree classification system" to replace { facet system}.</strong></li>
       </ol>
     </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-06-02<a id="id190602m020956"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">{ Corenet }</div>
+    <div class="itm s1">Database schema</div>
+  </div>
+  <ol>
+    <li><strong>( Music ) { Tobu } - Sound of Goodbye:</strong> <a href="https://youtu.be/goRGKll_zE0">Link</a>. <strong>Peace feeling</strong>, ideal for focusing and studying.</li>
+    <li><strong>( Music ) { Miss A } - Hush - instrumental:</strong> <a href="#">Link</a>.</li>
+    <li><strong>( Music ) { Produce 48 } - Rumor - karaoke:</strong> <a href="https://youtu.be/szSIpCLwxNE">Link</a>. Better for focusing and studying.</li>
+    <li><strong>( Music ) { Produce 48 } - Rumor - bass boosted:</strong> <a href="https://youtu.be/jmkeeKdJToQ">Link</a>.</li>
+    <li><strong>( Javascript ) { Const } != immutable:</strong> <a href="https://medium.com/dailyjs/use-const-and-make-your-javascript-code-better-aac4f3786ca1">Link</a>. A variable is like a pointer to a value (it’s a pointer for objects, it’s an assigned value for primitives). const prevents the variable to be assigned to another value. We could say it makes the pointer immutable, but it doesn’t make the value immutable too! // However, I don't see I get too much benefits of using <code>cost</code> so I rather not to use them, we just can't get rid of the problem that we have to use <code>var</code> in some (many) cases.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>02:10 End of thinking new "tree classification system", watching video.</strong></li>
+        <li><strong>02:11 Playing { game }-{ Zero-k }:</strong> Spectating a team match.</li>
+        <li><strong>02:55 Sleep.</strong></li>
+        <li><strong>07:50 Wake up:</strong> Still lack of 3 hours of sleep.</li>
+        <li><strong>08:00 Upload blog.</strong></li>
+        <li><strong>08:10 Working on { corenet },, back-end ,, thinking about "tree classification system":</strong> Question: Why do I need more than one tree? Why I don't just put everyting under one tree? Can a tree have a very deep level (like 20 level), will this hurt the performance? Answer: You can make a tree as deep as you want, it will have very little performance impact on <strong>read</strong> (thought it hurt <strong>write</strong> a lot but it is not the problem here) as long as you don't repeatedly use too much same tree node name in deeper level, but if you use too much <strong>same tree node name</strong> in <strong>deeper level</strong>, it starts to hurt performance, you should avoid this, you should migrate it to upper level (<strong>can be in same tree, or another tree</strong>, it's up to you and where fits the tree shape best), this also makes it easier for you to manage.</li>
+        <li><strong>09:50 Watching video.</strong></li>
+        <li><strong>10:20 Misc.</strong></li>
+        <li><strong>11:20 Sleep.</strong></li>
+        <li><strong>14:30 Wake up.</strong></li>
+        <li><strong>14:40 Cleaning room.</strong></li>
+        <li><strong>14:50 Grocery.</strong></li>
+        <li><strong>15:05 Cooking.</strong></li>
+        <li><strong>15:15 { Pulling } from { lahSale }.</strong></li>
+        <li><strong>15:35 Eating, watching video:</strong> <a href="https://youtu.be/__UlbZcS2nU">{ Twice } - SIXTEEN Ep 3 - Dahyun 1v1 Dance Cut</a>, <a href="https://youtu.be/SfvRhqsmU4o">(AI) NVIDIA’s AI Transformed My Chihuahua Into a Lion</a>, <a href="https://youtu.be/xdSkoq99QNo">{ The News Lens } - 余杰：多數台灣人在和平與自由的環境生活太久｜國際大風吹｜EP56</a>.</li>
+        <li><strong>16:30: Take a quick glance about { lahSale }-{ purchase_customer } part:</strong> Finding <code>info graphics</code> for inspiration.</li>
+        <li><strong>17:27: Talking with Woody:</strong> No need to do further special [ visual ]-[ graphic ] design at the moment, use bootstrap style.</li>
+        <li><strong>17:43: Listening to music:</strong> <a href="#"> { Miss A } - Hush - instrumental</a>.</li>
+        <li><strong>17:50 Working on { corenet },, back-end ,, creating database schema:</strong> Make a testing script that use <code>node</code> and <code>mongoose</code> to help me do simple CRUD testing, because doing CRUD testing with <code>MongoDB shell</code> is not very convenient and I can't use callback function with that and it can't test <code>Mongoose</code> thing.</li>
+        <li><strong>21:55 Cooking:</strong> Database <code>collection</code> <code>classTree</code> ,, schema, is set, but this all just at beginning, I set it one by one manually, very slow process and error prone.</li>
+        <li><strong>22:20 Eating, watching video, eating fruit:</strong> Mostly about <code>Twice</code>. <a href="https://youtu.be/LVF9L7dc-RE">Mina TWICE Childhood | From 1 To 20 Years Old</a>.</li>
+        <li><strong>23:55 Working on { corenet },, back-end ,, creating database schema:</strong> Dealing with <code>Mongoose</code> schema validation and validator. Not yet finished.</li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-06-03<a id="id190603m013911"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">{ Corenet }</div>
+    <div class="itm s1">Database schema</div>
+    <div class="itm s1">{ MongoDB }</div>
+    <div class="itm s1">{ lahSale }</div>
+  </div>
+  <ol>
+    <li><strong>( Music ) { Coldplay } - A Sky Full of Stars - covered by { The Piano Guys }:</strong> <a href="https://youtu.be/qrHFg47Mopk">Link</a>.</li>
+    <li><strong>( Music ) { Tobu } - Sound of Goodbye:</strong> <a href="https://youtu.be/goRGKll_zE0">Link</a>. <strong>Peace feeling</strong>, ideal for focusing and studying.</li>
+    <li><strong>( MongoDB ) Things I wish I knew before I started working with Mongodb:</strong> <a href="https://codeburst.io/things-i-wish-i-new-before-i-started-working-with-mongodb-c089d4b593db">Link</a>. Including using { cursor }-{ stream } to prevent memory huge consumption, using { populate() } to linking documents from different collections, <a href="https://scalegrid.io/blog/fast-paging-with-mongodb/">prevent low efficiency { Pagination }</a> ... .</li>
+    <li><strong>( Drawing ) 簡介不同等級的繪畫技能 [ 實力 ]-[ 段位水平 ] - 瓶頸:</strong> <a href="https://youtu.be/61Fv1MA7agw">Link</a>.</li>
+    <li><strong>( Drawing ) { 臨摹 } 和 { 透視 } 基礎對於繪畫的重要性:</strong> <a href="https://youtu.be/b1bFcIM8LoY">Link</a>.</li>
+    <li><strong>( JQuery ) How to get nth item of id/class - { .eq() }:</strong> <a href="https://stackoverflow.com/questions/15481510/jquery-nth-item-of-id-class">Link</a>.</li>
+    <li><strong>( JQuery ) How to animate scroll in jQuery - { .animate() }:</strong> <a href="https://howchoo.com/g/yjfjmty1zjb/how-to-animate-scroll-in-jquery">Link</a>. Notice, you have to use both <code>$("html, body")</code> for browser compatibility problem. I found using <code>$("body")</code> or <code>$(window)</code>not working ((at least)) on firefox.</li>
+    <li><strong>( JQuery ) { .animate() } not working on background-color property:</strong> <a href="https://stackoverflow.com/questions/34838286/jquery-animate-not-working-on-background-color-property?lq=1">Link</a>. --{ Background Color is not a numeric property and so it cannot be animated using .animate(). }--.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>01:45 Sleep.</strong></li>
+        <li><strong>09:50 Wake up.</strong></li>
+        <li><strong>09:55 Upload blog.</strong></li>
+        <li><strong>10:05 Watching video:</strong> <a href="https://youtu.be/GDt1EULp27U?t=215">{ Twice }-[ time stopped ]-{ Signal }</a>.</li>
+        <li><strong>10:55 Doing research about { ObjectId} in { Mongoose }.</strong></li>
+        <li><strong>11:05 Cooking, eating, keep working on { ObjectId}.</strong></li>
+        <li><strong>12:00 Testing { ObjectId} in { Mongoose } instead of { MongoDB shell }.</strong></li>
+        <li><strong>13:10 Reading article about { MongoDB }:</strong> { Atomicity } and { Transactions }.</li>
+        <li><strong>13:30 Eating fruit, brushing teeth, bathroom.</strong></li>
+        <li><strong>14:00 Reading article about { MongoDB }:</strong> { Aggregation }, { Cursor }-{ Stream } to solve large memory consumption problem. </li>
+        <li><strong>16:35 Cooking.</strong></li>
+        <li><strong>17:10 Eating, Reading article about { MongoDB }, brushing teeth.</strong></li>
+        <li><strong>17:35 Keep Reading article about { MongoDB }:</strong> <a href="https://www.mongodb.com/blog/post/the-mean-stack-mistakes-youre-probably-making">The MEAN Stack: Mistakes You're Probably Making With MongooseJS, And How To Fix Them</a>. Not too helpful.</li>
+        <li><strong>17:53 Watching video, misc.</strong></li>
+        <li><strong>19:15 Working on { lahSale }.</strong></li>
+        <li><strong>22:55 { lahSale } ,, Found bug:</strong> I forget to <code>removeEventListener</code> on <code>resize</code> event too. Last time is <code>scroll</code> event. This bug cost me 2 hours to found it.</li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-06-04<a id="id190604m022305"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">如何自學任何專業領域？</div>
+    <div class="itm s1">{ Corenet }</div>
+    <div class="itm s1">{ Express.js }</div>
+    <div class="itm s1">{ MVC }</div>
+    <div class="itm s1">Drawing ,, seeing "essential" under surface</div>
+    <div class="itm s1">Music composition</div>
+  </div>
+  <ol>
+    <li><strong>{ 空屋筆記-免費的自由 } - 為什麼我這麼討厭花錢?:</strong> <a href="https://www.facebook.com/noteinruin/photos/a.327977900714909/1207105662802124/?type=3&theater">Link</a>.</li>
+    <li><strong>( Drawing ) { 抖抖村 } - 關於自學的陷阱 - 如何有效率的的自學任何專業領域?:</strong> <a href="https://youtu.be/jTXjHCl8tlQ">Link</a>. 2 個互相違背的思維模式要同時存在，過度依賴任何一個都不行 (雖然 2 者是互相衝突的思維模式) - 1. 長時間自己摸索，自我反饋，自創，突破，而不要抄襲，參考和信任大部分的資訊。2. 找到對的，系統性的資源，模仿抄襲，而不要自己摸索。所以不僅要有主觀判斷的思維，還要有客觀判斷的思維。</li>
+    <li><strong>( Drawing ) { 抖抖村 } - 為什麼素描要學骨骼和肌肉結構?:</strong> <a href="https://youtu.be/ojFiUkhx3pw">Link</a>.</li>
+    <li><strong>( Music composition ) { iPianoDude } - Twice - Fancy:</strong> <a href="https://youtu.be/2tyK7dEVwxI">Link</a>. Very complex, natural, abundant, and amazing.</li>
+    <li><strong>( Music composition ) { iPianoDude } - Twice - TT:</strong> <a href="https://youtu.be/w5dwkStCWto">Link</a>.</li>
+    <li><strong>( Music composition ) { iPianoDude } - Twice - YES or YES:</strong> <a href="https://youtu.be/eTN2PZOs2v4">Link</a>.</li>
+    <li><strong>( Music composition ) { iPianoDude } - ITZY - DALLA DALLA:</strong> <a href="https://youtu.be/auQKWbH-irs">Link</a>.</li>
+    <li><strong>( Music ) { TWICE } - Fancy - pixel game style art:</strong> <a href="https://youtu.be/diSAhGEvah8">Link</a>.</li>
+    <li><strong>( Music ) Way Back Home - Violin & Flute - Cover by 2COLOR:</strong> <a href="https://youtu.be/5tmFAw9F2uQ">Link</a>.</li>
+    <li><strong>( Music ) Blackpink - Forever Young - dance:</strong> <a href="https://youtu.be/89kTb73csYg">Link</a>.</li>
+    <li><strong>( Javascript ) Trim specific character from a string, instead of just whitespace:</strong> <a href="https://stackoverflow.com/questions/26156292/trim-specific-character-from-a-string">Link</a>. I'm surprised about javascript <code>trim()</code> can't do this (it don't accept any arguments). Also <code>lodash</code> don't have this kind of function too.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>01:35 Taking shower:</strong> Finished progress of { lahSale } - 1. Apply scrollSpy onto purchase_customer.vue 2. Visual update with woody.</li>
+        <li><strong>02:20 Watching video.</strong></li>
+        <li><strong>02:35 Sleep.</strong></li>
+        <li><strong>10:45 Wake up.</strong></li>
+        <li><strong>10:53 { lahSale } ,, pull request, fixing a visual bug.</strong></li>
+        <li><strong>11:20 Preparing ingredient.</strong></li>
+        <li><strong>11:28 Uploading blog.</strong></li>
+        <li><strong>11:35 Wasting time on reflecting.</strong></li>
+        <li><strong>11:53 Cooking.</strong></li>
+        <li><strong>12:05 Working on { Corenet }.</strong></li>
+        <li><strong>12:25 Eating, searching about { Express.js }-{ route }.</strong></li>
+        <li><strong>12:40 Misc, messaging with { Pollash }.</strong></li>
+        <li><strong>13:00 Searching how to use { Express.js }-{ route }-{ regular expression }:</strong> There is a wierd "bug" that the dot character (<code>.</code>) of <code>regular expression</code> don't works in express router, but <code>[a-zA-Z0-9]</code> works.</li>
+        <li><strong>15:35 Eating fruit, watching video, brushing teeth.</strong></li>
+        <li><strong>16:00 Grocery, buying drinks, renting bills.</strong></li>
+        <li><strong>16:30 Watching video.</strong></li>
+        <li><strong>19:50 Working on { Corenet } ,, { route }:</strong> Progressing very slow, just for checking if route match is some type of pattern it cost so much time than I thought.</li>
+        <li><strong>22:10 Cooking.</strong></li>
+        <li><strong>22:25 Watching video, eating:</strong> Mostly is about <u>music composition</u>.</li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-06-05<a id="id190605m004800"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s2">{ Stoicism }</div>
+    <div class="itm s1">{ Corenet }</div>
+    <div class="itm s1">{ Express.js }</div>
+    <div class="itm s1">{ MongoDB }</div>
+    <div class="itm s1">{ lahSale }</div>
+    <div class="itm s1">{ Css }</div>
+    <div class="itm s1">{ Bootstrap }</div>
+  </div>
+  <ol>
+    <li><strong>( Philosophy ) ( Stoicism ) Hold the optimism in the pessimism - { Pursuit of Wonder }:</strong> <a href="https://youtu.be/4OhwxgR3g5g">Link</a>. --{ ... we find the optimism in the pessimism. }--. // Stoicism is about pessimistic about [ reality ]-[ facts ]-[ real world ], [ and ]-[ but ] optimistic with optimistic inner attitude facing these unfortunate at the same time. Stoicism require you to <strong>hold these 2 conflicting model</strong> in the same time, it is hard, but it is also so real and indeed a good model.</li>
+    <li><strong>( Music ) { ITZY } - DALLA DALLA:</strong> <a href="https://youtu.be/pNfTK39k55U">Link</a>.</li>
+    <li><strong>( Music ) { ITZY } - DALLA DALLA - Piano cover by { DooPiano } - acoustic:</strong> <a href="https://youtu.be/AVv7XNQyzIU">Link</a>.</li>
+    <li><strong>( MongoDB ) What is { Sharding }? - Vertical and horizontal database scaling:</strong> <a href="https://geekflare.com/mongodb-sharding-best-practices/">Link</a>. <a href="https://docs.mongodb.com/v4.0/sharding/">Link</a>.</li>
+    <li><strong>( MongoDB ) { "_id" Field } - What is MongoDB's _id Field and How to Use It:</strong> <a href="https://www.vividcortex.com/blog/what-is-mongodbs-id-field-and-how-to-use-it">Link</a>. --{ There are several actions available to users that simplify your organization and handling of documents. For instance, users who stick to the default ObjectID can access the creation of their timestamps with the getTimestamp() command, providing an easy and reliable method for seeing precisely when a document was created. Additionally, with a little client-side computation, you can leverage the built-in timestamp to find documents based on insertion time. }--.</li>
+    <li><strong>( MongoDB ) { "_id" Field }-{ ObejctId } - Why you should avoid adding another date field,  but use (and search within) ObjectId instead?:</strong> <a href="http://thediscoblog.com/blog/2013/06/22/mongodb-primary-keys-are-your-friend/">Link</a>. Also see <a href="https://www.vividcortex.com/blog/what-is-mongodbs-id-field-and-how-to-use-it">What is MongoDB's _id Field and How to Use It</a>. You can add another <strong>date field</strong>. But without <strong>indexing</strong>, it is very slow (just relative) on searching for a specific or range of date. So you want the search to be much faster (just relative) and you will try to add index on that date field, but now you end up adding <strong>one more extra indexed field</strong>. So why you do this? Just simply searching the date by ObjectId (timestamp, smallest units to one seconds), since every ObjectId consist with 4 part, the first part is the representation of the seconds since the Unix epoch.</li>
+    <li><strong>( MongoDB ) { "_id" Field } - You can explicit create "_id" field value:</strong> <a href="https://www.guru99.com/mongodb-objectid.html">Link</a>.</li>
+    <li><strong>( MongoDB ) { "_id" Field } - Is it bad to change _id type in MongoDB to integer?:</strong> <a href="https://stackoverflow.com/questions/14054384/is-it-bad-to-change-id-type-in-mongodb-to-integer">Link</a>. No, it's not a problem. But I don't need to change it, <code>ObjectId</code> is good enough in most case.</li>
+    <li><strong>( CSS ) Found solution of [ CSS dilemma ]-[ parent size and child size depends on each other:</strong> The dilemma is like this - you have a parent container A, inside this parent there is 2 sibling child B and C, B is image at left side, and C is some text at right side. Now your goal is 1. Make height of A to shrink as much  as possible until it reach the same size of C, 2. Make height of B to grow as much as possible, until reach the same size of A. // This brings the <strong>chicken-egg dilemma</strong>, how can you have differnt <strong>size depending direction</strong>? The solution is like this - make an extra container D between A and B, then set this container D to <code>position: absolute ; top: 0 ; bottom: 0 ; left: 0 ; right: 0 ;</code>, then also set B to <code>height: 100%;</code> finally set A to <code>position: relative;</code>, since A will consider D as <strong>zero size</strong> so it will shrink as much as possible until reach same height of C. And also D will try to stick with same height of A, B will do the same thing too. Now everything works!</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>00:55 Working on { Corenet } ,, { controller },{ model }.</strong></li>
+        <li><strong>02:41 Misc.</strong></li>
+        <li><strong>02:50 Sleep.</strong></li>
+        <li><strong>10:53 Wake up.</strong></li>
+        <li><strong>11:00 Upload blog.</strong></li>
+        <li><strong>11:05 Watching video.</strong></li>
+        <li><strong>12:05 Working on { Corenet } ,, { model }:</strong> Understand "_id" field.</li>
+        <li><strong>12:30 Cooking, reading article about "_id" and { ObjectId }.</strong></li>
+        <li><strong>13:15 Eating, reading article about "_id" and { ObjectId }.</strong></li>
+        <li><strong>13:35 Bathroom.</strong></li>
+        <li><strong>13:50 Fixing problem of network is down.</strong></li>
+        <li><strong>14:00 Network is off, still reading articles about { Sharding }.</strong></li>
+        <li><strong>14:20 Grocery, buying drinks.</strong></li>
+        <li><strong>14:30 Wasting time.</strong></li>
+        <li><strong>14:35 Take a look of { lahSale }.</strong></li>
+        <li><strong>14:43 Misc:</strong> <strong>Not very productive</strong>, my mind is not very focused, too bad. Reading article about { Dates } and { moment.js }, misc, messaging with woody about { lahSale }, Working on { Corenet } ,, { model }.</li>
+        <li><strong>17:15 Misc, wasting time.</strong>.</li>
+        <li><strong>17:53 Watching video.</strong>.</li>
+        <li><strong>18:25 Working on { Corenet } ,, { controller },{ model }:</strong> Change structure, because { Mongoose } { Model } could only be init (instantiate) once, never twice. I thought we should (good practice) instantiate the from controller to model for each single request.</li>
+        <li><strong>19:30 Bathroom:</strong> <a href="https://blog.grossman.io/how-to-write-async-await-without-try-catch-blocks-in-javascript/">Link</a>. I think we inevitably still have to use one or multiple <code>try ... catch</code> block when using <code>async function</code>.</li>
+        <li><strong>19:47 Working on { Corenet } ,, { controller },{ model }.</strong></li>
+        <li><strong>20:00 Talking with Woody:</strong> Topics include { lahSale }, my previous job working in factory assembly line, industrial design college days, I should increase my javascript skills by learning more advanced topic (by books or other systematic resources), { Corenet} and database design, and write much more code. The volunteering opportunity. My job and interview.</li>
+        <li><strong>21:50 Eating fruit, cooking.</strong></li>
+        <li><strong>22:20 Working on { lahSale } ,, build testing html for testing css.</strong></li>
+        <li><strong>22:45 Eating, thinking css problem.</strong></li>
+        <li><strong>23:45 Found solution of [ CSS dilemma ]-[ parent size and child size depends on each other.</strong></li>
+        <li><strong>23:59 Working on { lahSale } ,, fixing thumbnail size inside table cell.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-06-06<a id="id190606m031912"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">??</div>
+    <div class="itm s1">Back-end</div>
+    <div class="itm s1">{ Express.js }</div>
+    <div class="itm s1">{ lahSale }</div>
+    <div class="itm s1">{ Bootstrap }</div>
+  </div>
+  <ol>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>??:?? Working on { lahSale } ,, replacing some element to use boostrap style.</strong></li>
+        <li><strong>??:?? Understading why boostrap have nagative margin of { .row }.</strong></li>
+        <li><strong>03:30 Sleep.</strong></li>
+        <li><strong>11:35 Wake up.</strong></li>
+        <li><strong>11:40 Uploading blog.</strong></li>
+        <li><strong>11:55 ??.</strong></li>
+        <li><strong>?? Cooking, eating.</strong></li>
+      </ol>
+    </li>
+    <li><strong>:</strong> <a href="">Link</a>.</li>
   </ol>
 </div>
 
@@ -70,11 +339,12 @@ date: 2019-06-01 11:28:44
     <div class="itm s1">{ lahSale }</div>
   </div>
   <ol>
+    <li><strong>( Music composition ) { iPianoDude } - Twice - TT:</strong> <a href="https://youtu.be/w5dwkStCWto">Link</a>.</li>
     <li><strong>By time:</strong>
       <ol>
         <li><strong>?? Wake up.</strong></li>
         <li><strong>?? Go exercising.</strong></li>
-        <li><strong>?? Upload blog.</strong></li>
+        <li><strong>?? Uploading blog.</strong></li>
         <li><strong>?? Cooking, eating.</strong></li>
       </ol>
     </li>
