--- a/source/_posts/19/07/01/190701m074556.md
+++ b/source/_posts/19/07/01/190701m074556.md
@@ -42,13 +42,18 @@ date: 2019-07-01 07:45:56
   <h2>2019-07-01<a id="id190701m074558"></a></h2>
   <div class="kwCloud">
     <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s1">Exercising</div>
   </div>
   <ol>
     <li><strong>By time:</strong>
       <ol>
         <li><strong>06:25 Wake up.</strong></li>
         <li><strong>06:30 Uploading blog.</strong></li>
-        <li><strong>?? Designing Portfolio site:</strong> Doing research what to put inside Portfolio, to have correct direction, and to save time later.</li>
+        <li><strong>06:43 Exercising at home:</strong> <a href="https://youtu.be/cZnsLVArIt8">Brutal HIIT ladder workout - 20 minute HIIT workout at home</a>, and <code>plank</code>.</li>
+        <li><strong>07:02: Break.</strong></li>
+        <li><strong>07:05: Taking shower.</strong></li>
+        <li><strong>07:35 Designing Resume site:</strong> Wireframe. Finished.</li>
+        <li><strong>10:30 Cooking, keep working.</strong></li>
         <li><strong>?? Cooking, eating.</strong></li>
       </ol>
     </li>
